--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id = "root">
-    <form action="/test" method = "post">
-        <input text = "text" id = "title" placeholder="제목을 입력하세요">title</input>
-        <input text = "text" id = "details" placeholder="내용을 입력하세요">details</input>
-        <button type = "submit">save</button>
+  <div id = "root" class = "root">
+    <form action="/test" method = "post" class = "record">
+        <input text = "text" class="title" id = "title" placeholder="title"></input>
+        <input text = "text" class="details" id = "details" placeholder="details"></input>
+        <button type = "submit">submit</button>
     </form> 
 
-    <div id = "saved-list">
+    <div id = "saved-list" class="date">
     </div>
 
   </div>
