--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
 </head>
 <body>
   <div id = "root" class = "root">
-    <form action="/test" method = "post" class = "record">
-        <input text = "text" class="title" id = "title" placeholder="title"></input>
-        <input text = "text" class="details" id = "details" placeholder="details"></input>
-        <button type = "submit">submit</button>
+    <form action="/test" method = "POST">
+        <input type = "text" id = "title" name="title" placeholder="title"></input><br><br>
+        <textarea id = "details" name="content" placeholder="details"></textarea><br><br>
+        <input type = "submit" value="Submit"></input>
     </form> 
-
     <div id = "saved-list" class="date">
     </div>
-
   </div>
   <script>
   </script>
