--- a/index.html
+++ b/index.html
@@ -10,45 +10,31 @@
 <body>
   <div id = "root" class = "root">
     <form action="/test" method = "POST" class = "create">
-        <input type = "text" id = "title" name="title" placeholder="title"></input><br><br>
-        <textarea id = "details" name="content" placeholder="details"></textarea><br><br>
-        <input type = "submit" value="Submit" ></input>
+        <input type = "text" id = "title" class = "title" name="title" placeholder="title"></input><br><br>
+        <textarea id = "details" class= "details" name="content" placeholder="details"></textarea><br><br>
+        <input type = "submit" id = "submit" class = "submit" value="Submit"></input>
     </form> 
-    <div action="/save" id = "savedlist" class="date" method="post">
-
-    </div>
+    <section id = "savedlist" class="data">
+      <!-- <div id='result'></div> -->
+    </section>
   </div>
   <script>
-    // function testreset(){  //reset 기능
-    //   document.getElementById("chrlghk").reset();
-    // }
-  //   function myFunction() {
-
-  //   const node = document.createElement("p")
-  //   const tit = document.getElementById("title")
-  //   const textnode = document.createTextNode(`${tit}`)
-  //   console.log(textnode)
-  //   node.appendChild(textnode);
-  //   document.getElementById("savedlist").appendChild(node);
-
-  // }onclick="myFunction()"
-  const tit = document.getElementById("title")
-  const textnode = document.createTextNode(`${tit}`)
-    console.log(textnode)
-    // function myFunction() {
-      
-    //   const det = document.getElementById("details")
-    //   const SavedList = document.getElementById("savedlist")
-
-    //   const fragment = document.createDocumentFragment();
-    //   const testtest = fragment
-    //       .appendChild(document.createElement("div"))
-    //       .appendChild(document.createElement("input"))
-    //       .appendChild(document.createElement("textarea"))
-    //       testtest.textContent = `${tit}`;
-    //       testtest.textContent = `${tit}`;
-    //   savedList.appendChild(savedData);
-    // }
+    function testreset(){  //reset 기능
+      document.getElementById("").reset();
+    }
+    function printtitle()  {
+      const wpahr = document.getElementById('title').value;
+      const sodyd = document.getElementById('details').value;
+      const testarray = []
+      testarray.push(wpahr, sodyd);
+      console.log(testarray)
+      const item = document.createElement('div');
+      const sdl = document.getElementById("savedlist");
+      sdl.appendChild(item)
+      item.innerText= testarray;
+    }
+    const sssubmit = document.getElementById("submit");
+    sssubmit.addEventListener("click", printtitle)
     
   </script>
 </body>
